environment/development/e705-front/all/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e705-ui
  namespace: doa-e705-dev
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: e705-ui
      app.kubernetes.io/instance: e705-ui-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: e705-ui
        app.kubernetes.io/instance: e705-ui-dev
    spec:
      serviceAccountName: sa-e705-front
      securityContext:
        runAsNonRoot: true
      automountServiceAccountToken: false
      containers:
        - name: e705-ui
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          image: e705-ui
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: "2Gi"
