environment/development/e705-front/all/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e705-ui-service
  namespace: doa-e705-dev
  labels:
    app: e705-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: e705-app
    app.kubernetes.io/name: e705-ui
    app.kubernetes.io/instance: e705-ui-dev
